[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pynball"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stephen R A King", email = "sking.github@gmail.com" }
]
maintainers = [
    { name = "Stephen R A King", email = "sking.github@gmail.com" }
]
description = "Utility command line tool to manage python versions and virtual environments"
readme = "README.md"
keywords = [
    "python-version-management",
    "python-version-manager",
    "virtualenv-manager",
    "python-version-selector",
    "python-versions",
    "python-environment"
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3,<8.2.0",
    "python-magic-bin==0.4.14; platform_system=='Windows'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Installation/Setup",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/stephen-ra-king/pynball"
Documentation = "https://pynball.readthedocs.io/en/latest/"
"Release Notes" = "https://github.com/Stephen-RA-King/pynball/releases"
"Source Code" = "https://github.com/Stephen-RA-King/pynball/"
"Issue Tracker" = "https://github.com/Stephen-RA-King/pynball/issues"

[project.scripts]
pynball = "pynball.pynball:cli"

[tool.setuptools.dynamic]
version = { attr = "pynball.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
docstring-convention = "numpy"
max-complexity = 18
max-line-length = 88
select = ["B", "B9", "C", "D", "E", "F", "N", "W"]
exclude = ["tests/*", ".tox/*", ".nox/*", "docs/*", ".git/*", ".github/*"]
ignore = ["E203", "W503"]

[tool.flake8.per-file-ignores]
"__init__.py" = ["F401"]
"pathmagic.py" = ["F401"]
"test_pynball.py" = ["F401"]

[tool.black]
line-length = 88

[tool.isort]
import_heading_stdlib = "Core Library modules"
import_heading_thirdparty = "Third party modules"
import_heading_firstparty = "First party modules"
import_heading_localfolder = "Local modules"
include_trailing_comma = true
indent = '    '
known_third_party = [
    "click",
    "pytest",
    "setuptools",
    "pip-tools",
    "pre-commit"
]
known_first_party = [
    "pathmagic"
]
line_length = 80
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
balanced_wrapping = true
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
follow_imports = "skip"
html_report = "reports/mypy"
cache_dir = 'cache/.mypy_cache'
mypy_path = "typeshed/pyi:typeshed/imports"
exclude = [
    '^tests/[\w]*.py$',
    '^tools/[\w]*.py$',
    '^tasks.py$'
]

[tool.semantic_release]
version_variables = [
    "src/pynball/__init__.py:__version__",
    "docs/conf.py:version",
]
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
commit_message = "chore: generate release with PSR"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
skip_empty = true
