[metadata]
name = pynball
version = attr: pynball.__version__
author = Stephen R A King
author_email = sking.github@gmail.com
maintainer = Stephen R A King
maintainer_email = sking.github@gmail.com
description = Utility command line tool to manage python versions and virtual environments
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python-version-management,python-version-manager,virtualenv-manager,python-version-selector,python-versions,python-environment
platforms = windows
url = https://github.com/stephen-ra-king/pynball
download_url =
license = MIT
license_files = LICENSE
project_urls =
    documentation = https://pynamer.readthedocs.io/en/latest/
    Release Notes = https://github.com/Stephen-RA-King/pynamer/releases
    Source Code = https://github.com/Stephen-RA-King/pynamer/
    Issue Tracker = https://github.com/Stephen-RA-King/pynamer/issues

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Topic :: System :: Installation/Setup
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires =
    click>=8.1.3,<8.2.0
    python-magic-bin==0.4.14;platform_system=='Windows'

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pynball = pynball.pynball:cli


[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = numpy
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
per-file-ignores =
    # flake8 - module imported but not used
    __init__.py:F401
    pathmagic.py:F401
    test_pynball.py:F401
